[gd_scene load_steps=4 format=3 uid="uid://wmht6527uk0u"]

[ext_resource type="Script" uid="uid://cbfnukmkq6qu8" path="res://bus/chair/bus_chair.gd" id="1_v0vlt"]
[ext_resource type="Texture2D" uid="uid://c2dd1r1okago1" path="res://bus/chair/chair_outline.png" id="1_wr33o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0vlt"]
size = Vector2(6, 4)

[node name="BusChair" type="Area2D"]
script = ExtResource("1_v0vlt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v0vlt")

[node name="ChairOutline" type="Sprite2D" parent="."]
texture = ExtResource("1_wr33o")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
